--- a/home.html
+++ b/home.html
@@ -11,8 +11,8 @@
         <div class="Navbar">
             <div class="Navbar_icon"></div>
             <div class="Navbar_menu">
-                <p class="home">Home</p>
-                <p class="products">Products</p>
+                <p class="home"><a href="#top">Home</a></p>
+                <p class="products"><a href="#products">Products</a></p>
                 <div class="basket"></div>
             </div>
         </div>
@@ -24,6 +24,9 @@
         <div class="header-arrow"></div>
     </header>
     <div class="main"></div>
-    <footer></footer>
+    <footer>
+        <p class="about"><a href="#aboutUs">About us</a></p>
+        <p class="contacts">Contacts</p>
+    </footer>
 </body>
 </html>
